<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:id="@+id/cl_reply"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="1816dp"
        android:layout_height="238dp"
        android:src="@drawable/reply_last"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/iv_reply_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/reply_icon"
        android:layout_marginRight="13dp"
        app:layout_constraintBottom_toBottomOf="@id/textView10"
        app:layout_constraintEnd_toStartOf="@id/textView10"
        app:layout_constraintTop_toTopOf="@id/textView10"
        />
    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:src="@drawable/line_1780"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="43dp"
        android:text="@string/conn_replay_title"
        android:textColor="#ffffff"
        android:textSize="36dp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="26dp"
        android:text="@string/conn_replay_switch"
        android:textColor="#ffffff"
        android:textSize="36dp"
        app:layout_constraintEnd_toStartOf="@+id/tgBtn_reply_switch"
        app:layout_constraintTop_toTopOf="@id/imageView2" />

    <com.adayo.app.setting.base.SwitchButton
        android:id="@+id/tgBtn_reply_switch"
        android:layout_width="88dp"
        android:layout_height="50dp"
        app:kswBackDrawable="@drawable/selector_toggle_switch_background"
        app:kswFadeBack="true"
        app:kswAnimationDuration="200"
        app:kswThumbDrawable="@drawable/offroad_system_settings_button_switch_yuan"
        android:layout_marginEnd="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/textView12" />


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_reply"
            android:checked="true"
            android:paddingLeft="20dp"
            android:text="@string/conn_replay_button1"
            android:textColor="#ffffff"
            android:textSize="30dp"
            android:layout_marginTop="154dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_reply"
            android:text="@string/conn_replay_button2"
            android:paddingLeft="20dp"
            android:textColor="#ffffff"
            android:layout_marginStart="830dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton"
            app:layout_constraintTop_toTopOf="@+id/radioButton"
            android:textSize="30dp" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="306dp"
        android:layout_height="46dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/selector_reply_custom"
        android:button="@null"
        android:gravity="center"
        android:textColor="#000000"
        android:lines="1"
        android:ellipsize="end"
        android:textSize="30dp"
        android:layout_marginLeft="1488dp"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioButton" />
</android.support.constraint.ConstraintLayout>